[Buckinghamshire] Fix illegible text colour for pagination links

--- a/web/cobrands/buckinghamshire/base.scss
+++ b/web/cobrands/buckinghamshire/base.scss
@@ -125,6 +125,10 @@ dl dt {
     }
 }
 
+.pagination a {
+  color: #fff;
+}
+
 label {
   @extend %bold-font;
 }
